--- a/disclaimer.html
+++ b/disclaimer.html
@@ -56,11 +56,11 @@ https://github.com/aidswidjaja
     <div class="collapse navbar-collapse" id="navbarNav">
       <div class="navbar-nav">
         <a id="navcolour" class="nav-item nav-link" href="index.html">Home</a>
-        <a id="navcolour" class="nav-item nav-link" href="pages/about.html">About Us</a>
+        <a id="navcolour" class="nav-item nav-link" href="about.html">About Us</a>
         <a id="navcolour" class="nav-item nav-link active" href="#">Disclaimer<span class="sr-only">(current)</span></a>
         <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules">Server Rules</a>
-        <a id="navcolour" class="nav-item nav-link" href="pages/hotlines.html">Hotlines</a>
-        <a id="navcolour" class="nav-item nav-link" href="pages/breathe.html">Breathe</a>
+        <a id="navcolour" class="nav-item nav-link" href="hotlines.html">Hotlines</a>
+        <a id="navcolour" class="nav-item nav-link" href="breathe.html">Breathe</a>
         <p id="navcolour" class="nav-item nav-link disabled" style="float: right;">© Lively 2020</p>
         <a href="http://twitter.com/livelydiscord" class="zocial twitter icon d-lg-none"></a>
         <a href="http://instagram.com/livelydiscord" class="zocial instagram icon d-lg-none"></a>
