Added team page, updated HTML meta tags, removed my downloads that somehow got into the res directory lol

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Page Not Found</title>
+  <title>404 Page Not Found</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     * {
@@ -54,8 +54,8 @@
 </head>
 
 <body>
-  <h1>Page Not Found</h1>
-  <p>Sorry, but the page you were trying to view does not exist.</p>
+  <h1>404 Page Not Found</h1>
+  <p>Sorry, but the page you were trying to view does not exist. If something is supposed to be here please let Uproar know or DM aidswidjaja#2805 on Discord, thanks!</p>
 </body>
 
 </html>
