--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ https://github.com/aidswidjaja
 <head>
   <meta charset="utf-8">
   <title>Lively | Home</title>
-  <meta name="description" content="">
+  <meta name="description" content="The official website for the Lively Discord server.">
+  <meta name="author" content="aidswidjaja.github.io">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="site.webmanifest">
@@ -55,6 +56,7 @@ https://github.com/aidswidjaja
       <div class="navbar-nav">
         <a id="navcolour" class="nav-item nav-link active" href="#">Home<span class="sr-only">(current)</span></a>
         <a id="navcolour" class="nav-item nav-link" href="about.html">About Us</a>
+        <a id="navcolour" class="nav-item nav-link" href="team.html">Team</a>
         <a id="navcolour" class="nav-item nav-link" href="disclaimer.html">Disclaimer</a>
         <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules">Server Rules</a>
         <a id="navcolour" class="nav-item nav-link" href="hotlines.html">Hotlines</a>
