--- a/team.html
+++ b/team.html
@@ -91,7 +91,7 @@ https://github.com/aidswidjaja
         <div>
             <ul class="d-flex flex-wrap justify-content-center">
                 <li class="flex-item">
-                    <img class="teamimg" src="res/team/ceren.png">
+                    <img class="teamimg" src="res/team/ceren2.png">
                     <h1 class="display-4 teamtext">Ceren</h1>
                     <h1 class="display-6 teamtext">Manager</h1>
                 </li>
