events.png updates

--- a/about.html
+++ b/about.html
@@ -78,12 +78,12 @@ https://github.com/aidswidjaja
 
   <div id="page">
     <h1 class="display-4" id="pagetext">About Us</h1>
-    <h2 class="content" id="pagetext">Lively is a mental health (support) server based on <a
+    <h4 class="content" id="pagetext">Lively is a mental health (support) server based on <a
         href="https://discordapp.com">Discord</a>.
       It was launched on the 2nd of August, 2019. We strongly believe in working as a team to provide the best help we
       can -
       whether it is just talking and providing solutions, or giving advice and showing the right path.
-      We are strict about our support team policies, keeping you assured. </h2>
+      We are strict about our support team policies, keeping you assured. </h4>
 
     <div style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
         style="height: 100%; width: 100%;">
@@ -116,7 +116,7 @@ https://github.com/aidswidjaja
     <div class="container">
       <div class="row">
         <div class="col-sm">
-          <img src="res/events.png">
+          <img src="res/events.png" style="width: 650px;">
           </p>
         </div>
         <div class="col-sm">
