Major website redesign complete

--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@ https://github.com/aidswidjaja
       <div class="container">
         <div class="row">
           <div class="col-sm">
-            <h1 class="aboutflex">Spaces for you to express yourself</h1>
+            <h1 class="aboutflex">A place for you to express yourself</h1>
             <p>We have hobby channels that let people discuss any topic from music to gaming. We also run Lively Journals,
               a server where you can write down your thoughts and feelings in a private and secure environment.
             </p>
