--- a/breathe.html
+++ b/breathe.html
@@ -36,38 +36,40 @@ https://github.com/aidswidjaja
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/backgr.css">
   <link rel="stylesheet" href="css/social/css/zocial.css">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet"> 
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body id="bod">
 
- <!-- Navbar start -->
+  <!-- Navbar start -->
 
- <nav class="navbar navbar-expand-lg navbar-dark" id="topnav">
-  <a class="navbar-brand" href="index.html">
-    <img src="res/lively.png" width="64" height="64" alt="Lively logo">
-  </a>
+  <nav class="navbar navbar-expand-lg navbar-dark" id="topnav">
+    <a class="navbar-brand" href="index.html">
+      <img src="res/lively.png" width="64" height="64" alt="Lively logo">
+    </a>
 
-  <button class="navbar-toggler btn btn-outline-info" type="button" data-toggle="collapse" data-target="#navbarNav"
-    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    Menu
-  </button>
+    <button class="navbar-toggler btn btn-outline-info" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      Menu
+    </button>
 
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <div class="navbar-nav">
-      <a class="navbar-brand" href="index.html">Lively</a>
-      <a id="navcolour" class="nav-item nav-link" href="index.html">Home</a>
-      <a id="navcolour" class="nav-item nav-link" href="about.html">About Us</a>
-      <a id="navcolour" class="nav-item nav-link" href="team.html">Team</a>
-      <a id="navcolour" class="nav-item nav-link" href="disclaimer.html">Disclaimer</a>
-      <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules">Server Rules</a>
-      <a id="navcolour" class="nav-item nav-link" href="hotlines.html">Hotlines</a>
-      <a id="navcolour" class="nav-item nav-link active" href="#">Breathe<span class="sr-only">(current)</span></a>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="navbar-nav">
+        <a class="navbar-brand" href="index.html">Lively</a>
+        <a id="navcolour" class="nav-item nav-link" href="index.html">Home</a>
+        <a id="navcolour" class="nav-item nav-link" href="about.html">About Us</a>
+        <a id="navcolour" class="nav-item nav-link" href="team.html">Team</a>
+        <a id="navcolour" class="nav-item nav-link" href="disclaimer.html">Disclaimer</a>
+        <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules">Server Rules</a>
+        <a id="navcolour" class="nav-item nav-link" href="hotlines.html">Hotlines</a>
+        <a id="navcolour" class="nav-item nav-link active" href="#">Breathe<span class="sr-only">(current)</span></a>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
-<!-- Navbar end -->
+  <!-- Navbar end -->
 
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
@@ -75,25 +77,26 @@ https://github.com/aidswidjaja
 
   <div id="page">
     <h1 class="display-4" id="pagetext">Breathe</h1><span><br></span>
-    <img src="res/breathe.gif" alt="Breathing animation" style="border:5px solid black">
+    <p id="pagetext">
+      Let's do some breathing. You'll also find more resources in #resources on the Lively Discord server. 💜 <br><br>
+      <img src="res/breathe.gif" alt="Breathing animation" style="border:5px solid black">
+    </p>
   </div>
 
 
 
-<!-- Footer start -->
-<nav class="navbar navbar-dark bg-dark">
-  <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2020 • join us at <a
-      href="https://discord.is/lively">discord.is/lively</a></span>
-  <div class="socialnav">
-    <a href="http://twitter.com/livelydiscord"><img src="res/social/twitter.png" style="height: 50px;"></a>
-    <a href="http://instagram.com/livelydiscord"><img src="res/social/instagram.png" style="height: 30px;"></a>
-    <a href="https://www.facebook.com/livelydiscord"><img src="res/social/facebook.png"
-        style="height: 30px; margin-left: 10px;"></a>
-    <a href="https://medium.com/livelydiscord"><img src="res/social/medium.png" style="height: 45px;"></a>
-    <a href="https://discord.gg/hv7u9bT"><img src="res/social/discord.svg" style="height: 35px;"></a>
-  </div>
-</nav>
-<!-- Footer end-->
+  <!-- Footer start -->
+  <nav class="navbar navbar-dark bg-dark">
+    <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2020 • join us at <a
+        href="https://discord.is/lively">discord.is/lively</a></span>
+    <div class="socialnav">
+      <a href="http://twitter.com/livelydiscord"><img src="res/social/twitter.png" style="height: 50px;"></a>
+      <a href="http://instagram.com/livelydiscord"><img src="res/social/instagram.png" style="height: 30px;"></a>
+      <a href="https://medium.com/livelydiscord"><img src="res/social/medium.png" style="height: 45px;"></a>
+      <a href="https://discord.gg/hv7u9bT"><img src="res/social/discord.svg" style="height: 35px;"></a>
+    </div>
+  </nav>
+  <!-- Footer end-->
 </body>
 
 </html>
