--- a/disclaimer.html
+++ b/disclaimer.html
@@ -76,13 +76,13 @@ https://github.com/aidswidjaja
   <div id="page">
     <!-- on screens less wide than lg breakpoint (as defined by Bootstrap), hide the splash div-->
     <h1 class="display-4" id="pagetext">Disclaimer</h1>
-    <h2 class="content" id="pagetext">No-one within Lively is professionally trained. The purpose of Lively is to
+    <h5 class="content" id="pagetext">No-one within Lively is professionally trained. The purpose of Lively is to
       promote mental health awareness in a free environment. By no means, we should be the last resort to anyone or
       anyone associated with you needing Mental Health support including but not limited to acting upon hurting
       themselves, or others. If know anyone that is thinking about harming themselves in any way, please call the United
       States based National Suicide Prevention Lifeline at 1-800-273-8255, or your equivalent in your country or
-      municipalities.
-    </h2>
+      municipalities. You can also view more crisis resources <a href="hotlines.html">here</a>.
+    </h5>
   </div>
 
 
@@ -93,8 +93,6 @@ https://github.com/aidswidjaja
   <div class="socialnav">
     <a href="http://twitter.com/livelydiscord"><img src="res/social/twitter.png" style="height: 50px;"></a>
     <a href="http://instagram.com/livelydiscord"><img src="res/social/instagram.png" style="height: 30px;"></a>
-    <a href="https://www.facebook.com/livelydiscord"><img src="res/social/facebook.png"
-        style="height: 30px; margin-left: 10px;"></a>
     <a href="https://medium.com/livelydiscord"><img src="res/social/medium.png" style="height: 45px;"></a>
     <a href="https://discord.gg/hv7u9bT"><img src="res/social/discord.svg" style="height: 35px;"></a>
   </div>
