--- a/hotlines.html
+++ b/hotlines.html
@@ -36,64 +36,91 @@ https://github.com/aidswidjaja
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/backgr.css">
   <link rel="stylesheet" href="css/social/css/zocial.css">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet"> 
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body id="bod">
 
-<!-- Navbar start -->
+  <!-- Navbar start -->
 
-<nav class="navbar navbar-expand-lg navbar-dark" id="topnav">
-  <a class="navbar-brand" href="index.html">
-    <img src="res/lively.png" width="64" height="64" alt="Lively logo">
-  </a>
+  <nav class="navbar navbar-expand-lg navbar-dark" id="topnav">
+    <a class="navbar-brand" href="index.html">
+      <img src="res/lively.png" width="64" height="64" alt="Lively logo">
+    </a>
 
-  <button class="navbar-toggler btn btn-outline-info" type="button" data-toggle="collapse" data-target="#navbarNav"
-    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    Menu
-  </button>
+    <button class="navbar-toggler btn btn-outline-info" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      Menu
+    </button>
 
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <div class="navbar-nav">
-      <a class="navbar-brand" href="index.html">Lively</a>
-      <a id="navcolour" class="nav-item nav-link" href="index.html">Home</a>
-      <a id="navcolour" class="nav-item nav-link" href="about.html">About Us</a>
-      <a id="navcolour" class="nav-item nav-link" href="team.html">Team</a>
-      <a id="navcolour" class="nav-item nav-link" href="disclaimer.html">Disclaimer</a>
-      <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules">Server Rules</a>
-      <a id="navcolour" class="nav-item nav-link active" href="#">Hotlines<span class="sr-only">(current)</span></a>
-      <a id="navcolour" class="nav-item nav-link" href="breathe.html">Breathe</a>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="navbar-nav">
+        <a class="navbar-brand" href="index.html">Lively</a>
+        <a id="navcolour" class="nav-item nav-link" href="index.html">Home</a>
+        <a id="navcolour" class="nav-item nav-link" href="about.html">About Us</a>
+        <a id="navcolour" class="nav-item nav-link" href="team.html">Team</a>
+        <a id="navcolour" class="nav-item nav-link" href="disclaimer.html">Disclaimer</a>
+        <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules">Server Rules</a>
+        <a id="navcolour" class="nav-item nav-link active" href="#">Hotlines<span class="sr-only">(current)</span></a>
+        <a id="navcolour" class="nav-item nav-link" href="breathe.html">Breathe</a>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
-<!-- Navbar end -->
+  <!-- Navbar end -->
 
 
-  <div id="page">
-    <h1 class="display-4" id="pagetext">Hotlines</h1>
-    <h2 class="content" id="pagetext">Please use one of the following websites to find a hotline in your country.</h2>
-    <span class="fs-8"><a type="button" class="btn btn-danger btn-lg" id="hotlinelink" href="https://www.befrienders.org">Befrienders Worldwide</a><br></span>
-    <a type="button" class="btn btn-danger btn-lg" id="hotlinelink" href="https://faq.whatsapp.com/en/android/28030010/">WhatsApp FAQ - Global Suicide Hotlines</a><br>
-    <a type="button" class="btn btn-danger btn-lg" id="hotlinelink" href="http://www.suicide.org/international-suicide-hotlines.html">Suicide.org - International Suicide Hotlines</a><br>
-    <a type="button" class="btn btn-danger btn-lg" id="hotlinelink" href="https://www.suicidestop.com/call_a_hotline.html">Suicide Stop - Worldwide Suicide Hotlines</a><br>
-
-  </div>
-
-<!-- Footer start -->
-<nav class="navbar navbar-dark bg-dark">
-  <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2020 • join us at <a
-      href="https://discord.is/lively">discord.is/lively</a></span>
-  <div class="socialnav">
-    <a href="http://twitter.com/livelydiscord"><img src="res/social/twitter.png" style="height: 50px;"></a>
-    <a href="http://instagram.com/livelydiscord"><img src="res/social/instagram.png" style="height: 30px;"></a>
-    <a href="https://www.facebook.com/livelydiscord"><img src="res/social/facebook.png"
-        style="height: 30px; margin-left: 10px;"></a>
-    <a href="https://medium.com/livelydiscord"><img src="res/social/medium.png" style="height: 45px;"></a>
-    <a href="https://discord.gg/hv7u9bT"><img src="res/social/discord.svg" style="height: 35px;"></a>
-  </div>
-</nav>
-<!-- Footer end-->
+  <h1 class="display-4" id="pagetext">Crisis Resources</h1>
+  <p class="content" id="pagetext">Below you'll find a list of resources to help you out if you're in a crisis
+    situation. These are professionally-staffed hotlines that can get you the help you need, right now. There will
+    always be someone to listen to you, no matter what situation you're in. We sincerely hope that things get better for
+    you, and that journey to a better place starts here.</p>
+  <h5 id="pagetext">Suicide Hotlines</h5>
+  <p id="pagetext">
+    <span class="fs-8"><a type="button" class="btn btn-danger btn-lg" id="hotlinelink"
+        href="https://www.befrienders.org">Befrienders Worldwide</a><br></span>
+    <a type="button" class="btn btn-danger btn-lg" id="hotlinelink"
+      href="https://faq.whatsapp.com/en/android/28030010/">WhatsApp FAQ - Global Suicide Hotlines</a><br>
+    <a type="button" class="btn btn-danger btn-lg" id="hotlinelink"
+      href="http://www.suicide.org/international-suicide-hotlines.html">Suicide.org - International Suicide
+      Hotlines</a><br>
+    <a type="button" class="btn btn-danger btn-lg" id="hotlinelink"
+      href="https://www.suicidestop.com/call_a_hotline.html">Suicide Stop - Worldwide Suicide Hotlines</a><br>
+  <h5 id="pagetext">LGBTQ+ Hotlines</h5>
+  <p id="pagetext">
+    <span class="fs-8"><a type="button" class="btn btn-danger btn-lg" id="hotlinelink"
+        href="https://www.thetrevorproject.org/get-help-now/">The Trevor Project</a><br></span>
+    <a type="button" class="btn btn-danger btn-lg" id="hotlinelink"
+      href="https://suicidepreventionlifeline.org/help-yourself/lgbtq/">Suicide Prevention Lifeline - LGBTQ+</a><br>
+    <a type="button" class="btn btn-danger btn-lg" id="hotlinelink" href="https://ostem.org/page/crisis-hotlines">Ostem
+      - Crisis Hotlines</a><br>
+    <a type="button" class="btn btn-danger btn-lg" id="hotlinelink" href="https://pflag.org/hotlines">PFLAG - Crisis
+      Hotlines</a><br>
+  <h5 id="pagetext">Global Emergency Numbers - Law Enforcement/Fire/Medical</h5>
+  <p id="pagetext">
+    <span class="fs-8"><a type="button" class="btn btn-danger btn-lg" id="hotlinelink"
+        href="https://www.adducation.info/general-knowledge-travel-and-transport/emergency-numbers/">ADDucation -
+        Emergency Numbers List</a><br></span>
+    <a type="button" class="btn btn-danger btn-lg" id="hotlinelink"
+      href="https://en.wikipedia.org/wiki/List_of_emergency_telephone_numbers">Wikipedia - List of Emergency Telephone
+      Numbers</a><br>
+  <p class="content" id="pagetext">Please note that we do not help in tickets with crisis situations. If you were placed
+    into a Crisis Isolation System, please see the instructions there for regaining access to the server.
+  </p>
+  <!-- Footer start -->
+  <nav class="navbar navbar-dark bg-dark">
+    <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2020 • join us at <a
+        href="https://discord.is/lively">discord.is/lively</a></span>
+    <div class="socialnav">
+      <a href="http://twitter.com/livelydiscord"><img src="res/social/twitter.png" style="height: 50px;"></a>
+      <a href="http://instagram.com/livelydiscord"><img src="res/social/instagram.png" style="height: 30px;"></a>
+      <a href="https://medium.com/livelydiscord"><img src="res/social/medium.png" style="height: 45px;"></a>
+      <a href="https://discord.gg/hv7u9bT"><img src="res/social/discord.svg" style="height: 35px;"></a>
+    </div>
+  </nav>
+  <!-- Footer end-->
 
 </body>
 
