--- a/team.html
+++ b/team.html
@@ -76,11 +76,9 @@ https://github.com/aidswidjaja
   <![endif]-->
 
   <div id="page">
-    <h1 class="display-4" id="pagetext">The Team</h1><span><br></span>
-    <br>
-    <div>
+    <h1 class="display-4" id="pagetext">The Team</h1>
       <ul class="d-flex flex-wrap justify-content-center team">
-        <li class="flex-item">
+        <li class="team-flex-item">
           <div class="card cardteam">
             <img class="teamimg" src="res/team/ceren2.png">
             <div class="card-body">
@@ -89,14 +87,14 @@ https://github.com/aidswidjaja
             </div>
           </div>
         </li>
-        <li class="flex-item">
+        <li class="team-flex-item">
           <div class="card cardteam">
             <img class="teamimg" src="res/team/uproar.jpg">
             <div class="card-body">
               <h5 class="display-4 teamtext">Uproar</h5>
               <h6 class="display-6 teamtext">Owner</h6>
         </li>
-        <li class="flex-item">
+        <li class="team-flex-item">
           <div class="card cardteam">
             <img class="teamimg" src="res/team/rayn.jpg">
             <div class="card-body">
