--- a/404.html
+++ b/404.html
@@ -82,16 +82,21 @@ https://github.com/aidswidjaja
     </div>
   </div>
 
+  <!-- Footer start -->
   <nav class="navbar navbar-dark bg-dark">
-    <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2020 • join us at <a
-        href="https://discord.is/lively">discord.is/lively</a></span>
+    <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2020<br>Join us at <a
+        href="https://discord.is/lively" id="copyrightlink">discord.is/lively</a></span>
     <div class="socialnav">
-      <a href="http://twitter.com/livelydiscord"><img src="res/social/twitter.png" style="height: 50px;"></a>
-      <a href="http://instagram.com/livelydiscord"><img src="res/social/instagram.png" style="height: 30px;"></a>
-      <a href="https://medium.com/livelydiscord"><img src="res/social/medium.png" style="height: 45px;"></a>
-      <a href="https://discord.gg/hv7u9bT"><img src="res/social/discord.svg" style="height: 35px;"></a>
+      <a href="http://twitter.com/livelydiscord"><img class="social" src="res/social/twitter.png"
+          style="height: 50px;"></a>
+      <a href="http://instagram.com/livelydiscord"><img class="social" src="res/social/instagram.png"
+          style="height: 30px;"></a>
+      <a href="https://medium.com/livelydiscord"><img class="social" src="res/social/medium.png"
+          style="height: 45px;"></a>
+      <a href="https://discord.gg/hv7u9bT"><img class="social" src="res/social/discord.svg" style="height: 35px;"></a>
     </div>
   </nav>
+  <!-- Footer end-->
 
 </body>
 
