--- a/about.html
+++ b/about.html
@@ -137,15 +137,16 @@ https://github.com/aidswidjaja
         <div class="row">
           <div class="col-sm">
             <h1 class="aboutflex">A place for you to express yourself</h1>
-            <p>We have hobby channels that let people discuss any topic from music to gaming. We also run Lively Journals,
+            <p>We have hobby channels that let people discuss any topic from music to gaming. We also run Lively
+              Journals,
               a server where you can write down your thoughts and feelings in a private and secure environment.
             </p>
           </div>
           <div class="col-sm">
             <p style="text-align: right; display: inline;">
-            <img src="res/hobbies1.png" class="d-none d-lg-inline" style="height: 250px;">
-            <img src="res/hobbies2.png" style="height: 250px;">
-          </p>
+              <img src="res/hobbies1.png" class="d-none d-lg-inline" style="height: 250px;">
+              <img src="res/hobbies2.png" style="height: 250px;">
+            </p>
           </div>
         </div>
       </div>
@@ -160,19 +161,23 @@ https://github.com/aidswidjaja
     </div>
     <div>
       <h1 class="aboutready">Ready to join our community?</h1><br>
-      <p style="text-align: center;"><button type="button" class="btn btn-lg btn-success joinbtn">Join Lively</button></p>
+      <p style="text-align: center;"><button type="button" class="btn btn-lg btn-success joinbtn">Join Lively</button>
+      </p>
     </div>
     <br><br>
 
     <!-- Footer start -->
     <nav class="navbar navbar-dark bg-dark">
-      <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2020 • join us at <a
+      <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2020<br>Join us at <a
           href="https://discord.is/lively" id="copyrightlink">discord.is/lively</a></span>
       <div class="socialnav">
-        <a href="http://twitter.com/livelydiscord"><img src="res/social/twitter.png" style="height: 50px;"></a>
-        <a href="http://instagram.com/livelydiscord"><img src="res/social/instagram.png" style="height: 30px;"></a>
-        <a href="https://medium.com/livelydiscord"><img src="res/social/medium.png" style="height: 45px;"></a>
-        <a href="https://discord.gg/hv7u9bT"><img src="res/social/discord.svg" style="height: 35px;"></a>
+        <a href="http://twitter.com/livelydiscord"><img class="social" src="res/social/twitter.png"
+            style="height: 50px;"></a>
+        <a href="http://instagram.com/livelydiscord"><img class="social" src="res/social/instagram.png"
+            style="height: 30px;"></a>
+        <a href="https://medium.com/livelydiscord"><img class="social" src="res/social/medium.png"
+            style="height: 45px;"></a>
+        <a href="https://discord.gg/hv7u9bT"><img class="social" src="res/social/discord.svg" style="height: 35px;"></a>
       </div>
     </nav>
     <!-- Footer end-->
