--- a/team.html
+++ b/team.html
@@ -77,44 +77,47 @@ https://github.com/aidswidjaja
 
   <div id="page">
     <h1 class="display-4" id="pagetext">The Team</h1>
-      <ul class="d-flex flex-wrap justify-content-center team">
-        <li class="team-flex-item">
-          <div class="card cardteam">
-            <img class="teamimg" src="res/team/ceren2.png">
-            <div class="card-body">
-              <h5 class="display-4 teamtext">Ceren</h5>
-              <h6 class="display-6 teamtext">Manager</h6>
-            </div>
+    <ul class="d-flex flex-wrap justify-content-center team">
+      <li class="team-flex-item">
+        <div class="card cardteam">
+          <img class="teamimg" src="res/team/ceren2.png">
+          <div class="card-body">
+            <h5 class="display-4 teamtext">Ceren</h5>
+            <h6 class="display-6 teamtext">Manager</h6>
           </div>
-        </li>
-        <li class="team-flex-item">
-          <div class="card cardteam">
-            <img class="teamimg" src="res/team/uproar.jpg">
-            <div class="card-body">
-              <h5 class="display-4 teamtext">Uproar</h5>
-              <h6 class="display-6 teamtext">Owner</h6>
-        </li>
-        <li class="team-flex-item">
-          <div class="card cardteam">
-            <img class="teamimg" src="res/team/rayn.jpg">
-            <div class="card-body">
-              <h5 class="display-4 teamtext">Rayn</h5>
-              <h6 class="display-6 teamtext">Manager</h6>
-        </li>
-      </ul>
-    </div>
+        </div>
+      </li>
+      <li class="team-flex-item">
+        <div class="card cardteam">
+          <img class="teamimg" src="res/team/uproar.jpg">
+          <div class="card-body">
+            <h5 class="display-4 teamtext">Uproar</h5>
+            <h6 class="display-6 teamtext">Owner</h6>
+      </li>
+      <li class="team-flex-item">
+        <div class="card cardteam">
+          <img class="teamimg" src="res/team/rayn.jpg">
+          <div class="card-body">
+            <h5 class="display-4 teamtext">Rayn</h5>
+            <h6 class="display-6 teamtext">Manager</h6>
+      </li>
+    </ul>
+  </div>
   </div>
 
 
   <!-- Footer start -->
   <nav class="navbar navbar-dark bg-dark">
-    <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2020 • join us at <a
-        href="https://discord.is/lively">discord.is/lively</a></span>
+    <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2020<br>Join us at <a
+        href="https://discord.is/lively" id="copyrightlink">discord.is/lively</a></span>
     <div class="socialnav">
-      <a href="http://twitter.com/livelydiscord"><img src="res/social/twitter.png" style="height: 50px;"></a>
-      <a href="http://instagram.com/livelydiscord"><img src="res/social/instagram.png" style="height: 30px;"></a>
-      <a href="https://medium.com/livelydiscord"><img src="res/social/medium.png" style="height: 45px;"></a>
-      <a href="https://discord.gg/hv7u9bT"><img src="res/social/discord.svg" style="height: 35px;"></a>
+      <a href="http://twitter.com/livelydiscord"><img class="social" src="res/social/twitter.png"
+          style="height: 50px;"></a>
+      <a href="http://instagram.com/livelydiscord"><img class="social" src="res/social/instagram.png"
+          style="height: 30px;"></a>
+      <a href="https://medium.com/livelydiscord"><img class="social" src="res/social/medium.png"
+          style="height: 45px;"></a>
+      <a href="https://discord.gg/hv7u9bT"><img class="social" src="res/social/discord.svg" style="height: 35px;"></a>
     </div>
   </nav>
   <!-- Footer end-->
