scrollbar + breathe page fixes

--- a/breathe.html
+++ b/breathe.html
@@ -76,8 +76,8 @@ https://github.com/aidswidjaja
   <![endif]-->
 
   <div id="page">
-    <h1 class="display-4" id="pagetext">Breathe</h1><span><br></span>
-    <p id="pagetext">
+    <h1 class="display-4" id="pagetext">Breathe</h1>
+    <p id="pagetext" style="text-align: center;">
       Let's do some breathing. You'll also find more resources in #resources on the Lively Discord server. 💜 <br><br>
       <img src="res/breathe.gif" alt="Breathing animation" style="border:5px solid black">
     </p>
