Discord link fix

--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@ https://github.com/aidswidjaja
     </div>
     <div>
       <h1 class="aboutready">Ready to join our community?</h1><br>
-      <p style="text-align: center;"><button type="button" class="btn btn-lg btn-success joinbtn">Join Lively</button>
+      <p style="text-align: center;"><button type="button" class="btn btn-lg btn-success joinbtn" href="https://discord.is/lively">Join Lively</button>
       </p>
     </div>
     <br><br>
