--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@ https://github.com/aidswidjaja
         <a id="navcolour" class="nav-item nav-link active" href="#">About Us<span class="sr-only">(current)</span></a>
         <a id="navcolour" class="nav-item nav-link" href="team.html">Team</a>
         <a id="navcolour" class="nav-item nav-link" href="disclaimer.html">Disclaimer</a>
-        <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules">Server Rules</a>
+        <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules" target="_blank">Server Rules</a>
         <a id="navcolour" class="nav-item nav-link" href="hotlines.html">Hotlines</a>
         <a id="navcolour" class="nav-item nav-link" href="breathe.html">Breathe</a>
       </div>
@@ -161,7 +161,7 @@ https://github.com/aidswidjaja
     </div>
     <div>
       <h1 class="aboutready">Ready to join our community?</h1><br>
-      <p style="text-align: center;"><a type="button" class="btn btn-lg btn-success joinbtn" href="https://discord.is/lively">Join Lively</a>
+      <p style="text-align: center;"><a type="button" class="btn btn-lg btn-success joinbtn" href="https://discord.is/lively" target="_blank">Join Lively</a>
       </p>
     </div>
     <br><br>
