--- a/disclaimer.html
+++ b/disclaimer.html
@@ -62,7 +62,7 @@ https://github.com/aidswidjaja
         <a id="navcolour" class="nav-item nav-link" href="about.html">About Us</a>
         <a id="navcolour" class="nav-item nav-link" href="team.html">Team</a>
         <a id="navcolour" class="nav-item nav-link active" href="#">Disclaimer<span class="sr-only">(current)</span></a>
-        <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules">Server Rules</a>
+        <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules" target="_blank">Server Rules</a>
         <a id="navcolour" class="nav-item nav-link" href="hotlines.html">Hotlines</a>
         <a id="navcolour" class="nav-item nav-link" href="breathe.html">Breathe</a>
       </div>
