--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ https://github.com/aidswidjaja
         <a id="navcolour" class="nav-item nav-link" href="about.html">About Us</a>
         <a id="navcolour" class="nav-item nav-link" href="team.html">Team</a>
         <a id="navcolour" class="nav-item nav-link" href="disclaimer.html">Disclaimer</a>
-        <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules">Server Rules</a>
+        <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules" target="_blank">Server Rules</a>
         <a id="navcolour" class="nav-item nav-link" href="hotlines.html">Hotlines</a>
         <a id="navcolour" class="nav-item nav-link" href="breathe.html">Breathe</a>
       </div>
@@ -78,7 +78,7 @@ https://github.com/aidswidjaja
         Lively is a server based on providing assistance related to mental health. We strongly believe that the people
         who need someone to talk to definitely deserve to be treated better.
         <b>Here at Lively, we aim at listening to you and helping you out in every possible way.</b><br><br>
-        <a href="https://discord.gg/hv7u9bT" class="btn btn-lg btn-outline-dark" id="splashbutton">Join us on
+        <a href="https://discord.gg/hv7u9bT" class="btn btn-lg btn-outline-dark" target="_blank" id="splashbutton">Join us on
           Discord</a>
       <p class="indexlead" style="font-size: 10px;">You need to be 13 or over to use Discord.</p>
       </p>
@@ -120,7 +120,7 @@ https://github.com/aidswidjaja
                   href="https://discord.com/guidelines">Community
                   Guidelines.</a>
               </p>
-              <a href="https://trello.com/b/U3EgslJI/lively-rules" class="btn btn-index">See our server rules</a>
+              <a href="https://trello.com/b/U3EgslJI/lively-rules" target="_blank" class="btn btn-index">See our server rules</a>
             </div>
           </div>
         </div>
