Team page update

--- a/team.html
+++ b/team.html
@@ -82,7 +82,7 @@ https://github.com/aidswidjaja
         <div class="card cardteam">
           <img class="teamimg" src="res/team/ceren2.png">
           <div class="card-body">
-            <h5 class="display-4 teamtext">Ceren</h5>
+            <h5 class="display-4 teamtext"><a class="teambio" href="https://dsc.bio/ceren">Ceren</a></h5>
             <h6 class="display-6 teamtext">Manager</h6>
           </div>
         </div>
@@ -91,14 +91,14 @@ https://github.com/aidswidjaja
         <div class="card cardteam">
           <img class="teamimg" src="res/team/uproar.jpg">
           <div class="card-body">
-            <h5 class="display-4 teamtext">Uproar</h5>
+            <h5 class="display-4 teamtext"><a class="teambio" href="https://dsc.bio/uproar">Uproar</a></h5>
             <h6 class="display-6 teamtext">Owner</h6>
       </li>
       <li class="team-flex-item">
         <div class="card cardteam">
           <img class="teamimg" src="res/team/rayn.jpg">
           <div class="card-body">
-            <h5 class="display-4 teamtext">Rayn</h5>
+            <h5 class="display-4 teamtext"><a class="teambio" href="https://dsc.bio/raynnie">Ceren</a></h5>
             <h6 class="display-6 teamtext">Manager</h6>
       </li>
     </ul>
