--- a/team.html
+++ b/team.html
@@ -83,7 +83,7 @@ https://github.com/aidswidjaja
           <img class="teamimg" src="res/team/ceren2.png">
           <div class="card-body">
             <h5 class="display-4 teamtext"><a class="teambio" href="https://dsc.bio/ceren" target="_blank">Ceren</a></h5>
-            <h6 class="display-6 teamtext">Manager</h6>
+            <h6 class="display-6 teamrole">Manager</h6>
           </div>
         </div>
       </li>
@@ -92,14 +92,14 @@ https://github.com/aidswidjaja
           <img class="teamimg" src="res/team/uproar.jpg">
           <div class="card-body">
             <h5 class="display-4 teamtext"><a class="teambio" href="https://dsc.bio/uproar" target="_blank">Uproar</a></h5>
-            <h6 class="display-6 teamtext">Owner</h6>
+            <h6 class="display-6 teamrole">Owner</h6>
       </li>
       <li class="team-flex-item">
         <div class="card cardteam">
           <img class="teamimg" src="res/team/rayn.jpg">
           <div class="card-body">
             <h5 class="display-4 teamtext"><a class="teambio" href="https://dsc.bio/raynnie" target="_blank">Ceren</a></h5>
-            <h6 class="display-6 teamtext">Manager</h6>
+            <h6 class="display-6 teamrole">Manager</h6>
       </li>
     </ul>
   </div>
