--- a/team.html
+++ b/team.html
@@ -98,7 +98,7 @@ https://github.com/aidswidjaja
         <div class="card cardteam">
           <img class="teamimg" src="res/team/rayn.jpg">
           <div class="card-body">
-            <h5 class="display-4 teamtext"><a class="teambio" href="https://dsc.bio/raynnie" target="_blank">Ceren</a></h5>
+            <h5 class="display-4 teamtext"><a class="teambio" href="https://dsc.bio/raynnie" target="_blank">Rayn</a></h5>
             <h6 class="display-6 teamrole">Manager</h6>
       </li>
     </ul>
