About page image update

--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@ https://github.com/aidswidjaja
             </p>
           </div>
           <div class="col-sm">
-            <img src="res/channels.png">
+            <img src="res/channel5.jpg" style="width: 300px;">
           </div>
         </div>
       </div>
