--- a/team.html
+++ b/team.html
@@ -7,120 +7,101 @@ https://github.com/aidswidjaja
 <html class="no-js" lang="">
 
 <head>
-  <meta charset="utf-8">
-  <title>Lively | Team</title>
-  <meta name="description" content="The official website for the Lively Discord server.">
-  <meta name="author" content="aidswidjaja.github.io">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8">
+    <title>Lively | Team</title>
+    <meta name="description" content="The official website for the Lively Discord server.">
+    <meta name="author" content="aidswidjaja.github.io">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <link rel="icon" type="image/png" href="favicon.ico">
-  <meta name="theme-color" content="#fafafa">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
+    <link rel="icon" type="image/png" href="favicon.ico">
+    <meta name="theme-color" content="#fafafa">
 
-  <!-- CDN: Bootstrap JQuery, Popper.js | Local: JS, CSS -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="js/bootstrap.js"></script>
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/index.css">
+    <!-- CDN: Bootstrap JQuery, Popper.js | Local: JS, CSS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/index.css">
 
-  <!-- Background Image Randomiser courtesy of Paul Lockett https://paul-lockett.co.uk/randombackground.html REQUIRES JAVASCRIPT AND CSS-->
-  <!-- Responsive Background Image courtesy of Jennifer Kyrnin https://www.lifewire.com/responsive-background-images-3467001 REQUIRES CSS3-->
+    <!-- Background Image Randomiser courtesy of Paul Lockett https://paul-lockett.co.uk/randombackground.html REQUIRES JAVASCRIPT AND CSS-->
+    <!-- Responsive Background Image courtesy of Jennifer Kyrnin https://www.lifewire.com/responsive-background-images-3467001 REQUIRES CSS3-->
 
-  <script src="js/backgr.js"></script>
-  <link rel="stylesheet" href="css/index.css">
-  <link rel="stylesheet" href="css/backgr.css">
-  <link rel="stylesheet" href="css/social/css/zocial.css">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
-    rel="stylesheet">
+    <script src="js/backgr.js"></script>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/backgr.css">
+    <link rel="stylesheet" href="css/social/css/zocial.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body id="bod">
 
-  <!-- Navbar start -->
+    <!-- Navbar start -->
 
-  <nav class="navbar navbar-expand-lg navbar-dark" id="topnav">
-    <a class="navbar-brand" href="index.html  ">
-      <img src="res/lively.png" width="64" height="64" alt="Lively logo">
-    </a>
+    <nav class="navbar navbar-expand-lg navbar-dark" id="topnav">
+        <a class="navbar-brand" href="index.html  ">
+            <img src="res/lively.png" width="64" height="64" alt="Lively logo">
+        </a>
 
-    <button class="navbar-toggler btn btn-outline-info" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler btn btn-outline-info" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       Menu
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <div class="navbar-nav">
-        <a class="navbar-brand" href="index.html">Lively</a>
-        <a id="navcolour" class="nav-item nav-link" href="index.html">Home</a>
-        <a id="navcolour" class="nav-item nav-link" href="about.html">About Us</a>
-        <a id="navcolour" class="nav-item nav-link active" href="#">Team<span class="sr-only">(current)</span></a>
-        <a id="navcolour" class="nav-item nav-link" href="disclaimer.html">Disclaimer</a>
-        <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules" target="_blank">Server Rules</a>
-        <a id="navcolour" class="nav-item nav-link" href="hotlines.html">Hotlines</a>
-        <a id="navcolour" class="nav-item nav-link" href="breathe.html">Breathe</a>
-      </div>
-    </div>
-  </nav>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="navbar-nav">
+                <a class="navbar-brand" href="index.html">Lively</a>
+                <a id="navcolour" class="nav-item nav-link" href="index.html">Home</a>
+                <a id="navcolour" class="nav-item nav-link" href="about.html">About Us</a>
+                <a id="navcolour" class="nav-item nav-link active" href="#">Team<span class="sr-only">(current)</span></a>
+                <a id="navcolour" class="nav-item nav-link" href="disclaimer.html">Disclaimer</a>
+                <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules" target="_blank">Server Rules</a>
+                <a id="navcolour" class="nav-item nav-link" href="hotlines.html">Hotlines</a>
+                <a id="navcolour" class="nav-item nav-link" href="breathe.html">Breathe</a>
+            </div>
+        </div>
+    </nav>
 
-  <!-- Navbar end -->
+    <!-- Navbar end -->
 
-  <!--[if IE]>
+    <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-  <div id="page">
-    <h1 class="display-4" id="pagetext">The Team</h1>
-    <ul class="d-flex flex-wrap justify-content-center team">
-      <li class="team-flex-item">
-        <div class="card cardteam">
-          <img class="teamimg" src="res/team/ceren2.png">
-          <div class="card-body">
-            <h5 class="display-4 teamtext"><a class="teambio" href="https://dsc.bio/ceren" target="_blank">Ceren</a></h5>
-            <h6 class="display-6 teamrole">Manager</h6>
-          </div>
+    <div id="page">
+        <h1 class="display-4" id="pagetext">The Team</h1>
+        <ul class="d-flex flex-wrap justify-content-center team">
+            <li class="team-flex-item">
+                <div class="card cardteam">
+                    <img class="teamimg" src="res/team/uproar.jpg">
+                    <div class="card-body">
+                        <h5 class="display-4 teamtext"><a class="teambio" href="https://dsc.bio/uproar" target="_blank">Uproar</a></h5>
+                        <h6 class="display-6 teamrole">Owner</h6>
+            </li>
+            <li class="team-flex-item">
+                <div class="card cardteam">
+                    <img class="teamimg" src="res/team/rayn.jpg">
+                    <div class="card-body">
+                        <h5 class="display-4 teamtext"><a class="teambio" href="https://dsc.bio/raynnie" target="_blank">Rayn</a></h5>
+                        <h6 class="display-6 teamrole">Manager</h6>
+            </li>
+        </ul>
         </div>
-      </li>
-      <li class="team-flex-item">
-        <div class="card cardteam">
-          <img class="teamimg" src="res/team/uproar.jpg">
-          <div class="card-body">
-            <h5 class="display-4 teamtext"><a class="teambio" href="https://dsc.bio/uproar" target="_blank">Uproar</a></h5>
-            <h6 class="display-6 teamrole">Owner</h6>
-      </li>
-      <li class="team-flex-item">
-        <div class="card cardteam">
-          <img class="teamimg" src="res/team/rayn.jpg">
-          <div class="card-body">
-            <h5 class="display-4 teamtext"><a class="teambio" href="https://dsc.bio/raynnie" target="_blank">Rayn</a></h5>
-            <h6 class="display-6 teamrole">Manager</h6>
-      </li>
-    </ul>
-  </div>
-  </div>
+        </div>
 
 
-  <!-- Footer start -->
-  <nav class="navbar navbar-dark bg-dark">
-    <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2020<br>Join us at <a
+        <!-- Footer start -->
+        <nav class="navbar navbar-dark bg-dark">
+            <span class="navbar-brand mb-0" id="copyright">Copyright © Lively 2020<br>Join us at <a
         href="https://discord.is/lively" id="copyrightlink">discord.is/lively</a></span>
-    <div class="socialnav">
-      <a href="http://twitter.com/livelydiscord"><img class="social" src="res/social/twitter.png"
-          style="height: 50px;"></a>
-      <a href="http://instagram.com/livelydiscord"><img class="social" src="res/social/instagram.png"
-          style="height: 30px;"></a>
-      <a href="https://medium.com/livelydiscord"><img class="social" src="res/social/medium.png"
-          style="height: 45px;"></a>
-      <a href="https://discord.gg/hv7u9bT"><img class="social" src="res/social/discord.svg" style="height: 35px;"></a>
-    </div>
-  </nav>
-  <!-- Footer end-->
+            <div class="socialnav">
+                <a href="http://twitter.com/livelydiscord"><img class="social" src="res/social/twitter.png" style="height: 50px;"></a>
+                <a href="http://instagram.com/livelydiscord"><img class="social" src="res/social/instagram.png" style="height: 30px;"></a>
+                <a href="https://medium.com/livelydiscord"><img class="social" src="res/social/medium.png" style="height: 45px;"></a>
+                <a href="https://discord.gg/hv7u9bT"><img class="social" src="res/social/discord.svg" style="height: 35px;"></a>
+            </div>
+        </nav>
+        <!-- Footer end-->
 </body>
 
 </html>
